Fixed some construct tests, made code created from templates be without extra blank lines

--- a/tests/benchmarks/constructs/InplaceOperationIntegerMul.py.j2
+++ b/tests/benchmarks/constructs/InplaceOperationIntegerMul.py.j2
@@ -19,3 +19,7 @@ module_value2 = 3
 {% block construct %}
     s *= 1000
 {% endblock %}
+{% block after_construct %}
+    s *= module_value2
+
+{% endblock %}
