--- a/tests/benchmarks/constructs/InplaceOperationFloatAdd.py.j2
+++ b/tests/benchmarks/constructs/InplaceOperationFloatAdd.py.j2
@@ -19,3 +19,7 @@ module_value2 = 3.0
 {% block construct %}
     s += 1000.0
 {% endblock %}
+{% block after_construct %}
+
+    s += module_value2
+{% endblock %}
