--- a/nuitka/tools/specialize/templates/HelperOperationBinaryInt.c.j2
+++ b/nuitka/tools/specialize/templates/HelperOperationBinaryInt.c.j2
@@ -23,11 +23,75 @@ static PyObject *SLOT_{{nb_slot}}_{{left.getHelperCodeName()}}_{{right.getHelper
     const long a = {{left.getAsLongValueExpression("operand1")}};
     const long b = {{right.getAsLongValueExpression("operand2")}};
 
+{% if operand in "+-"%}
     const long x = (long)((unsigned long)a {{operand}} b);
-    if ((x^a) >= 0 || (x^{{"~" if operand == "-" else ""}}b) >= 0)
+    if ((x^a) >= 0 || (x^{{"~" if operand == "-" else ""}}b) >= 0) {
         return PyInt_FromLong(x);
+    }
+{% elif operand == "*"%}
+    const long longprod = (long)((unsigned long)a * b);
+    const double doubleprod = (double)a * (double)b;
+    const double doubled_longprod = (double)longprod;
 
-    // TODO: Could in-line and specialize this too.
+    if (likely(doubled_longprod == doubleprod)) {
+        return PyInt_FromLong(longprod);
+    }
+
+    const double diff = doubled_longprod - doubleprod;
+    const double absdiff = diff >= 0.0 ? diff : -diff;
+    const double absprod = doubleprod >= 0.0 ? doubleprod : -doubleprod;
+
+    if (likely(32.0 * absdiff <= absprod)) {
+        return PyInt_FromLong(longprod);
+    }
+{% elif operand == "//" %}
+    if (unlikely(b == 0)) {
+        PyErr_Format(PyExc_ZeroDivisionError, "integer division or modulo by zero");
+        return NULL;
+    }
+
+    /* TODO: Isn't this a very specific value only, of which we could
+     * hardcode the constant result. Not sure how well the C compiler
+     * optimizes UNARY_NEG_WOULD_OVERFLOW to this, but dividing by
+     * -1 has to be rare anyway.
+     */
+
+    if (likely(b != -1 || !UNARY_NEG_WOULD_OVERFLOW(a))) {
+
+        /* We use C11 or C++03 which have no trouble doing floor with
+         * signs correctly.
+         */
+        long result = a / b;
+
+        return PyInt_FromLong(result);
+    }
+{% elif operand=="/" and "true_div" in nb_slot %}
+    if (unlikely(b == 0)) {
+        PyErr_Format(PyExc_ZeroDivisionError, "division by zero");
+        return NULL;
+    }
+
+    if (a == 0) {
+        PyObject *result = b < 0 ? const_float_minus_0_0 : const_float_0_0;
+        Py_INCREF(result);
+
+        return result;
+    }
+
+
+/* May need to resort to LONG code, which we currently do not
+ * specialize yet. TODO: Once we do that, call it here.
+ */
+#if DBL_MANT_DIG < WIDTH_OF_ULONG
+    if ((a >= 0 ? 0UL + a : 0UL - a) >> DBL_MANT_DIG || (b >= 0 ? 0UL + b : 0UL - b) >> DBL_MANT_DIG) {
+    } else
+#endif
+    return PyFloat_FromDouble((double)a / (double)b);
+{% else %}
+#error Operand {{operand}} not implemented in {{name}}
+{% endif %}
+
+    // TODO: Could in-line and specialize this as well.
     PyObject *o = PyLong_Type.tp_as_number->{{nb_slot}}(operand1, operand2);
     assert(o != Py_NotImplemented);
     return o;
