Optimization: Compile time optimize and warn specialized operations
* This adds "OLDDIV" which is default Python2 division, which only
  differs in the slot to be used and the integer division really.

* Control flow descriptions now indicate if they are an unsupported
  operation or not.

* Added typical values for built-in type shapes, aimed at producing
  the exception with a simulator.

* Added more shape methods for "OldDiv" and added "TrueDiv" and
  "FloorDir" where they were missing.

* Avoid collisions of aliases shapes by making them not do that, e.g.
  bytes and str did for Python2, and the later was configured for
  Python2.

* Missing code helpers now report the source reference, so one can tell
  where it's missing.

--- a/nuitka/tools/specialize/templates/HelperOperationBinaryInt.c.j2
+++ b/nuitka/tools/specialize/templates/HelperOperationBinaryInt.c.j2
@@ -44,7 +44,7 @@ static PyObject *SLOT_{{nb_slot}}_{{left.getHelperCodeName()}}_{{right.getHelper
     if (likely(32.0 * absdiff <= absprod)) {
         return PyInt_FromLong(longprod);
     }
-{% elif operand == "//" %}
+{% elif operand == "//" or nb_slot == "nb_divide" %}
     if (unlikely(b == 0)) {
         PyErr_Format(PyExc_ZeroDivisionError, "integer division or modulo by zero");
         return NULL;
@@ -77,7 +77,6 @@ static PyObject *SLOT_{{nb_slot}}_{{left.getHelperCodeName()}}_{{right.getHelper
 
         return result;
     }
-
 
 /* May need to resort to LONG code, which we currently do not
  * specialize yet. TODO: Once we do that, call it here.
