--- a/nuitka/tools/specialize/templates/HelperOperationBinary.c.j2
+++ b/nuitka/tools/specialize/templates/HelperOperationBinary.c.j2
@@ -216,6 +216,6 @@ PyObject *BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{right.getH
 {% endif %}
 
 
-    {{left.getRaiseUnsupportedTypeError(operand, right, "type1", "type2")|indent}}
+{{left.getRaiseUnsupportedTypeError(operand, right, "type1", "type2")}}
 {% endif %}
 }
