Optimization: Specialize more operations "**" and "@"
* Also add more "%" variants found missing.

* All nodes for normal binary operations now have their own class,
  allowing to remove the generic one, and move it closer to the
  in-place nodes, which are still generic.

* Added control flow descriptions for all operations for the None
  type and the bool type, more to follow, this covers division with
  indication of possible "ZeroDivisionError", as well as all adds
  old division.

* For pow, the slot type is different and generation has been made
  more general.

--- a/nuitka/tools/specialize/templates/HelperOperationBinary.c.j2
+++ b/nuitka/tools/specialize/templates/HelperOperationBinary.c.j2
@@ -23,10 +23,10 @@ PyObject *BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{right.getH
     {{left.getTypeSpecializationCode(right, nb_slot, sq_slot1, "operand1", "operand2"|indent)}}
 {%else %}
     PyTypeObject *type1 = {{left.getTypeValueExpression("operand1")}};
-    binaryfunc slot1 = {{left.getSlotValueExpression("type1", nb_slot)}};
+    {{left.getSlotType(nb_slot)}} slot1 = {{left.getSlotValueExpression("type1", nb_slot)}};
 
     PyTypeObject *type2 = {{right.getTypeValueExpression("operand2")}};
-    binaryfunc slot2 = NULL;
+    {{left.getSlotType(nb_slot)}} slot2 = NULL;
 
     if (!({{left.getTypeIdenticalCheckExpression(right, "type1", "type2")}})) {
         assert(type1 != type2);
@@ -47,7 +47,7 @@ PyObject *BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{right.getH
     if (slot1 != NULL) {
         if (slot2 != NULL) {
             if ({{left.getRealSubTypeCheckCode(right, "type2", "type1")}}) {
-                PyObject *x = slot2(operand1, operand2);
+                PyObject *x = {{left.getSlotCallExpression(nb_slot, "slot2", "operand1", "operand2")}};
 
                 if (x != Py_NotImplemented) {
                     if (unlikely(x == NULL)) {
@@ -62,7 +62,7 @@ PyObject *BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{right.getH
             }
         }
 
-        PyObject *x = slot1(operand1, operand2);
+        PyObject *x = {{left.getSlotCallExpression(nb_slot, "slot1", "operand1", "operand2")}};
 
         if (x != Py_NotImplemented) {
             if (unlikely(x == NULL)) {
@@ -76,7 +76,7 @@ PyObject *BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{right.getH
     }
 
     if (slot2 != NULL) {
-        PyObject *x = slot2(operand1, operand2);
+        PyObject *x = {{left.getSlotCallExpression(nb_slot, "slot2", "operand1", "operand2")}};
 
         if (x != Py_NotImplemented) {
             if (unlikely(x == NULL)) {
@@ -109,10 +109,10 @@ PyObject *BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{right.getH
                 PyNumberMethods *mv = Py_TYPE(coerced1)->tp_as_number;
 
                 if (likely(mv == NULL)) {
-                    binaryfunc slot = mv->{{nb_slot}};
+                    {{left.getSlotType(nb_slot)}} slot = mv->{{nb_slot}};
 
                     if (likely(slot != NULL)) {
-                        PyObject *x = slot(coerced1, coerced2);
+                        PyObject *x = {{left.getSlotCallExpression(nb_slot, "slot", "coerced1", "coerced2")}};
 
                         Py_DECREF(coerced1);
                         Py_DECREF(coerced2);
@@ -148,10 +148,10 @@ PyObject *BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{right.getH
                 PyNumberMethods *mv = Py_TYPE(coerced1)->tp_as_number;
 
                 if (likely(mv == NULL)) {
-                    binaryfunc slot = mv->{{nb_slot}};
+                    {{left.getSlotType(nb_slot)}} slot = mv->{{nb_slot}};
 
                     if (likely(slot != NULL)) {
-                        PyObject *x = slot(coerced1, coerced2);
+                        PyObject *x = {{left.getSlotCallExpression(nb_slot, "slot", "coerced1", "coerced2")}};
 
                         Py_DECREF(coerced1);
                         Py_DECREF(coerced2);
