--- a/nuitka/tools/specialize/templates/HelperOperationBinaryLong.c.j2
+++ b/nuitka/tools/specialize/templates/HelperOperationBinaryLong.c.j2
@@ -17,7 +17,7 @@
 {#                                                                              #}
 static PyObject *SLOT_{{nb_slot}}_{{left.getHelperCodeName()}}_{{right.getHelperCodeName()}}({{left.getVariableDecl("operand1")}}, {{right.getVariableDecl("operand2")}}) {
     {# TODO: Could in-line and specialize this per slot too. #}
-    PyObject *x = PyLong_Type.tp_as_number->{{nb_slot}}((PyObject *)operand1, (PyObject *)operand2);
+    PyObject *x = {{left.getSlotCallExpression(nb_slot, "PyLong_Type.tp_as_number->" + nb_slot, "operand1", "operand2")}};
     assert(x != Py_NotImplemented);
     return x;
 }
