--- a/nuitka/tools/specialize/templates/HelperOperationBinary.c.j2
+++ b/nuitka/tools/specialize/templates/HelperOperationBinary.c.j2
@@ -19,7 +19,16 @@ PyObject *BINARY_OPERATION_{{op_code}}_{{left.getHelperCodeName()}}_{{right.getH
     {{left.getCheckValueCode("operand1")|indent}}
     {{right.getCheckValueCode("operand2")|indent}}
 
-{%if left.getTypeSpecializationCode(right, nb_slot, sq_slot1, "operand1", "operand2") %}
+{% if left.type_name == "object" and right.type_name == "object" %}
+    {# CPython2 treats integer values with fast path. #}
+#if PYTHON_VERSION < 300
+    if (PyInt_CheckExact(operand1) && PyInt_CheckExact(operand2)) {
+        return BINARY_OPERATION_{{op_code}}_INT_INT(operand1, operand2);
+    }
+#endif
+{% endif %}
+
+{% if left.getTypeSpecializationCode(right, nb_slot, sq_slot1, "operand1", "operand2") %}
     {{left.getTypeSpecializationCode(right, nb_slot, sq_slot1, "operand1", "operand2"|indent)}}
 {% else %}
     PyTypeObject *type1 = {{left.getTypeValueExpression("operand1")}};
